<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bluetooth Control</string>
    <string name="send">Send</string>
    <string name="key">Key</string>
    <string name="settings">Settings</string>
    <string name="devices_list">Devices List</string>
    <string name="search">Search</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="available_devices">Available Devices</string>
    <string name="about">About</string>
    <string name="bt_not_supported">Your device doesn\'t support bluetooth !</string>
    <string name="bt_is_on">Bluetooth is ON</string>
    <string name="bt_is_off">Bluetooth is OFF</string>
    <string name="logo">Logo</string>
    <string name="developer">Developed by Sadra Samadi</string>
    <string name="ok">OK</string>
    <string name="version">Version</string>
    <string name="start_searching">Searching for devices …</string>
    <string name="stop_searching">Searching finished</string>
    <string name="device_found">New device founded</string>
    <string name="device_not_connected">Device not connected !</string>
    <string name="connected">Device connected</string>
    <string name="not_connected">Not connected</string>
    <string name="connecting_to">Connecting to %1$s …</string>
    <string name="cancel">Cancel</string>
    <string name="disconnected">Disconnected</string>
    <string name="name">Name</string>
    <string name="enable">Enable</string>
    <string name="edit_button">Edit button</string>
    <string name="up_key">Up key</string>
    <string name="up_right_key">Up Right key</string>
    <string name="right_key">Right key</string>
    <string name="down_right_key">Down Right key</string>
    <string name="down_key">Down key</string>
    <string name="down_left_key">Down Left key</string>
    <string name="up_left_key">Up Left key</string>
    <string name="left_key">Left key</string>
    <string name="enable_button0">Enable Button 1</string>
    <string name="enable_button1">Enable Button 2</string>
    <string name="enable_button2">Enable Button 3</string>
    <string name="enable_button3">Enable Button 4</string>
    <string name="enable_button4">Enable Button 5</string>
    <string name="enable_button5">Enable Button 6</string>
    <string name="enable_button6">Enable Button 7</string>
    <string name="enable_button7">Enable Button 8</string>
    <string name="enable_button8">Enable Button 9</string>
    <string name="buttons">Buttons</string>
    <string name="analog_control">Analog Control</string>
</resources>
